[package]
name = "rauth"
version = "1.0.0"
authors = ["Hèctor Morales <hector.morales.carnice@gmail.com>"]
edition = "2021"

[dependencies]
actix-web = { version = "4.3.1", optional = true } # rest
async_once = "0.2.6"
async-trait = "0.1.68"
base64 = "0.21.2"
chrono = "0.4.26"
deadpool-lapin = "0.10.0"
dotenv = "0.15.0"
jsonwebtoken = "8.3.0"
lapin = "2.2.1"
lazy_static = "1.4.0"
lettre = "0.10.4"
libreauth = "0.16.0"
once_cell = "1.18.0"
openssl = "0.10.54"
prost = { version = "0.11.9", optional = true } # protobuf
protoc = { version = "2.28.0", optional = true }
rand = "0.8.5"
redis = { version = "0.23.0", features = ["tokio-comp"] }
regex = "1.8.4"
reool = "0.30.0"
serde = "1.0.164" # data parser
serde_json = "1.0.96"
sha256 = "1.1.4"
sqlx = { version = "0.6.3", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
] }
strum = "0.24.1"
strum_macros = "0.24.3"
tera = "1.19.0" # template engine
tokio = { version = "1.28.2", features = ["macros"] }
tonic = { version = "0.9.2", optional = true } # gRPC
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
tonic-build = "0.9.2"

[lib]
name = "rauth"
path = "src/lib.rs"

[features]
default = ["grpc", "rest"]
grpc = ["prost", "protoc", "tonic"]
rest = ["actix-web"]

[[bin]]
name = "grpc"
path = "src/bin/grpc.rs"
required-features = ["grpc"]

[[bin]]
name = "rest"
path = "src/bin/rest.rs"
required-features = ["rest"]
