[package]
name = "rauth"
version = "1.0.0"
authors = ["Hèctor Morales <hector.morales.carnice@gmail.com>"]
edition = "2021"

[dependencies]
actix-web = { version = "4.3.1", optional = true } # rest
async_once = "0.2.6"
async-trait = "0.1.68"
base64 = "0.21.2"
chrono = "0.4.26"
deadpool-lapin = { version = "0.10.0", optional = true }
dotenv = "0.15.0"
jsonwebtoken = "8.3.0"
lapin = { version = "2.2.1", optional = true }
lazy_static = "1.4.0"
lettre = "0.10.4"
libreauth = "0.16.0"
once_cell = "1.18.0"
openssl = "0.10.54"
prost = { version = "0.11.9", optional = true } # protobuf
protoc = { version = "2.28.0", optional = true }
rand = "0.8.5"
redis = { version = "0.23.0", features = ["tokio-comp"], optional = true }
regex = "1.8.4"
reool = { version = "0.30.0", optional = true }
serde = "1.0.164" # data parser
serde_json = "1.0.96"
sha256 = "1.1.4"
sqlx = { version = "0.6.3", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
], optional = true }
strum = "0.25.0"
strum_macros = "0.25.0"
tera = "1.19.0" # template engine
tokio = { version = "1.28.2", features = ["macros", "rt", "rt-multi-thread"] }
tonic = { version = "0.10.0", optional = true } # gRPC
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
tonic-build = "0.9.2"

[lib]
name = "rauth"
path = "src/lib.rs"

[features]
default = ["config", "grpc", "rest", "postgres", "rabbitmq", "redis-cache"]
config = []
grpc = ["prost", "protoc", "tonic"]
postgres = ["sqlx"]
rabbitmq = ["deadpool-lapin", "lapin"]
redis-cache = ["redis", "reool"]
rest = ["actix-web"]

[[bin]]
name = "grpc"
path = "src/bin/grpc.rs"
required-features = ["grpc"]

[[bin]]
name = "rest"
path = "src/bin/rest.rs"
required-features = ["rest"]
