[package]
    authors = ["Hèctor Morales <hector.morales.carnice@gmail.com>"]
    edition = "2021"
    name    = "rauth"
    version = "1.0.0"

[dependencies]
    actix-web = {version = "4.3.1", optional = true} # rest
    argon2 = "0.5.1"
    async-trait = "0.1.68"
    base64 = "0.21.2"
    chrono = "0.4.26"
    deadpool-lapin = {version = "0.10.0", optional = true}
    dotenv = "0.15.0"
    futures = "0.3.28"
    jsonwebtoken = "8.3.0"
    lapin = {version = "2.2.1", optional = true}
    lettre = {version = "0.10.4", optional = true}
    libreauth = "0.16.0"
    once_cell = "1.18.0"
    openssl = "0.10.54"
    opentelemetry-otlp = {version = "0.13.0", optional = true}
    opentelemetry-semantic-conventions = {version = "0.12.0", optional = true}
    opentelemetry_api = {version = "0.20.0", optional = true}
    opentelemetry_sdk = {version = "0.20.0", features = [
        "rt-tokio",
    ], optional = true}
    prost = {version = "0.12.0", optional = true} # protobuf
    protoc = {version = "2.28.0", optional = true}
    rand = "0.8.5"
    redis = {version = "0.23.0", features = ["tokio-comp"], optional = true}
    regex = "1.8.4"
    reool = {version = "0.30.0", optional = true}
    serde = "1.0.164" # data parser
    serde_json = "1.0.96"
    sha256 = "1.1.4"
    sqlx = {version = "0.7.1", features = [
        "chrono",
        "postgres",
        "runtime-tokio-rustls",
    ], optional = true}
    strum = "0.25.0"
    strum_macros = "0.25.0"
    tera = {version = "1.19.0", optional = true} # template engine
    thiserror = "1.0.47"
    tokio = {version = "1.28.2", features = ["macros", "rt", "rt-multi-thread"]}
    tonic = {version = "0.9.0", optional = true} # gRPC
    tracing = "0.1.37"
    tracing-opentelemetry = {version = "0.21.0", optional = true}
    tracing-subscriber = {version = "0.3.17", optional = true}

[build-dependencies]
    tonic-build = "0.9.0"

[lib]
    name = "rauth"
    path = "src/lib.rs"

[features]
    default = [
        "grpc",
        "postgres",
        "rabbitmq",
        "redis-cache",
        "rest",
        "smtp",
        "tracer",
    ]
    grpc = ["prost", "protoc", "tonic"]
    postgres = ["sqlx"]
    rabbitmq = ["deadpool-lapin", "lapin"]
    redis-cache = ["redis", "reool"]
    rest = ["actix-web", "redis-cache"]
    smtp = ["lettre", "tera"]
    tracer = [
        "opentelemetry-otlp",
        "opentelemetry-semantic-conventions",
        "opentelemetry_api",
        "opentelemetry_sdk",
        "tonic",
        "tracing-opentelemetry",
        "tracing-subscriber",
    ]

[[bin]]
    name = "grpc"
    path = "src/bin/grpc.rs"
    required-features = [
        "grpc",
        "postgres",
        "rabbitmq",
        "redis-cache",
        "smtp",
        "tracer",
    ]

[[bin]]
    name              = "rest"
    path              = "src/bin/rest.rs"
    required-features = ["rest", "tracer"]
